MODUL-638 fix for visual flickering and multi line vertical alignment

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -1,5 +1,7 @@
 @import 'commons';
 
+$m-input-style-base-height: $m-line-height + em;
+
 @mixin input-style-cursor($cursor: default) {
     &,
     .m-input-style__label,
@@ -54,12 +56,6 @@
         .m-input-style {
             &__label {
                 transform: translate3d(0, calc((-50% * 0.8) - #{$m-input-style--padding}), 0) scale(0.8);
-
-                .m-textarea &,
-                .m-rich-text &,
-                .m--has-word-wrap & {
-                    margin-bottom: -1em; // to negate the space occupied by the label
-                }
             }
 
             &__text {
@@ -129,7 +125,7 @@
     &.m--is-anim-ready {
         .m-input-style {
             &__label {
-                transition-property: color, transform;
+                transition-property: color, transform, top;
                 transition-duration: $m-transition-duration--l;
                 transition-timing-function: ease;
             }
@@ -171,26 +167,18 @@
 
     &__body {
         display: flex;
+        position: relative;
         align-items: center;
         flex: 1 1 auto;
         width: 100%;
         font-weight: $m-font-weight;
         text-decoration: none;
         background-color: $m-color--white;
+        // background-color: hotpink;
 
         .m--has-label & {
-            position: absolute;
-            bottom: 0;
-            top: 0;
-            width: calc(100% - #{$m-input-style--padding * 2});
-        }
-
-        .m-textarea .m--is-label-up &,
-        .m-rich-text .m--is-label-up &,
-        .m--has-word-wrap .m--is-label-up & {
-            position: relative;
-            width: 100%;
-            bottom: unset;
+            min-height: $m-input-style-base-height;
+            margin-top: -$m-input-style-base-height;
         }
 
         &__left {
